--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <p>
                             Night starting at 76&euro;
                         </p>
-                        <divclass="stars" >
+                        <div class="stars" >
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -193,7 +193,8 @@
     <div class="greybackground">
         <h1>Most Popular</h1>
         <section>
-            <div class="accommodations">
+            <div>
+                <div class="accommodations popular">
                 <div class="mostpopularimageframe">
                     <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                         alt="Morning Sun Hotel" title="Elegant accommodations">
@@ -212,6 +213,9 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div>
+                </div>
+            </div>
+                <div class="accommodations popular">
                     <div class="mostpopularimageframe">
                         <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                             alt="Au coeur de l'eau Bed and Breakfast" title="Bed and Breakfast accomnodations">
@@ -230,6 +234,9 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-regular fa-star"></i>
                         </div>
+                    </div>
+                </div>    
+                <div class="accommodations popular">
                         <div class="mostpopularimageframe">
                             <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                 alt="Tout bleu et Blanc Hotel" title="Simple accommodations">
@@ -249,36 +256,59 @@
                                 <i class="fa-regular fa-star"></i>
                             </div>
                         </div>
+                </div>
         </section>
     </div>
 </section>
 <h1>Activities in Marseille</h1>
 <section id="activities">
-    <div id="three" class="accommodations">
-        <div class="activitesimageframe1">
+    <div id="three" class="activities">
+        <div class="activitiesimageframe1">
             <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Old Port"
                 title="Port activities">
+            <h1>
+                Old Port
+            </h1>    
         </div>
-        <div class="activitesimageframe2">
+    <div>   
+        <div class="activitiesimageframe2">
             <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Pomegues Fort"
                 title="Fort activities">
+            <h1>
+                Pomegues Fort
+            </h1>
         </div>
-        <div class="activitesimageframe2">
+        <div class="activitiesimageframe2">
             <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Frioul Island"
                 title="Island activities">
+            <h1>
+               Frioul Island
+            </h1>    
         </div>
-        <div class="activitesimageframe1">
+    </div>    
+        <div class="activitiesimageframe1">
             <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                 alt="Calanques National Park" title="Park activities">
+            <h1>
+                Calanques National Park
+            </h1>    
         </div>
-        <div class="activitesimageframe2">
+    <div>
+        <div class="activitiesimageframe2">
             <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"
                 title="City activities">
+            <h1>
+                Notre-Dame-de-la-Garde
+            </h1>
         </div>
-        <div class="activitesimageframe2">
+        <div class="activitiesimageframe2">
             <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Longchamp Park"
                 title="City park activities">
+            <h1>
+                Longchamp Park
+            </h1>    
         </div>
+    </div>
     </div>
 </section>
 <footer>
