--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./CSS/style.css">
     <script src="https://kit.fontawesome.com/a6fe72f35c.js" crossorigin="anonymous"></script>
 </head>
+<body>
 <header id="header">
     <img src="images/logo/Booki.png">
     <nav>
@@ -120,7 +121,7 @@
                 <div class="accommodations">
                     <div class="imageframe">
                         <img src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
-                            alt="Hotel de la mer" title="Queen accommodations"class="photoadjustment">
+                            alt="Hotel de la mer" title="Queen accommodations" class="photoadjustment">
                     </div>
                     <div class="cardtext">
                         <h4>
@@ -214,6 +215,7 @@
                         <i class="fa-solid fa-star"></i>
                     </div>
                 </div>
+                </div>
             </div>
                 <div class="accommodations popular">
                     <div class="mostpopularimageframe">
@@ -262,7 +264,7 @@
 </section>
 <h1>Activities in Marseille</h1>
 <section id="activities">
-    <div id="three" class="activities">
+    <div class="activities">
         <div class="activitiesimageframe1">
             <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Old Port"
                 title="Port activities">
@@ -310,10 +312,10 @@
         </div>
     </div>
     </div>
-</section>
-<footer>
+    </section>
+        <footer>
     <nav>
-        <div id="four" class="About">
+        <div class="About">
             <h1>About</h1>
             <a href="#" class="w3-bar-item w3-button w3-hover-green w3-right">Site Map</a><br>
             <a href="#" class="w3-bar-item w3-button w3-hover-blue w3-right">General terms and Conditions</a><br>
@@ -330,7 +332,7 @@
             <a href="#" class="w3-bar-item w3-button w3-hover-blue w3-right">Contact Us</a><br>
         </div>
     </nav>
-</footer>
-
+        </footer>
+</body>
 
 </html>
